# ZX2D10GE01R-V4848

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/button/: CMakeLists.txt  button.c
components/mt8901/: mt8901.c
main/: CMakeLists.txt  board.h  main.c  screen.c
